          printed on the physical board (fixes #67)
        - correct typo in POD SYNOPSYS for dac() where we were sending in
          incorrect parameters (fixes #66)
        - correct some method's Parameter section to follow my normal standard.
          (closes #69)
        - added rtc() in support for the RPi::RTC::DS3231 distribution
          (closes #70)

2.3625  2018-04-19
        - in FAQ, add the 4 row 20 col config to env vars (closes #65)
        - bumped prereq RPi::Pin to 2.3606
        - added I2C, Serial and SPI configuration details at the top of the FAQ
          (closes #63; closes #64)
        - re-enabled "both" interrupt test file (closes #48)
        - servo() now accepts a configuration hash that allows sending in a
          non-default PWM clock speed and PWM range (closes #45)
        - modified GPS examples to use the new GPSD::Parse methods

2.3624  2018-03-27
        - added blurb in FAQ Testing section that describes setting up I2C and
          serial properly
        - bumped prereq version of WiringPi::API to 2.3616 which provides more
          elegant handling if the version of wiringPi that's installed isn't
          at the minimum 2.36
          
2.3623  2018-03-14
        - Pi day!
        - added support for the new RPi::StepperMotor distribution
        - reworked the FAQ and added Test::POD::LinkCheck tests to ensure all
          POD links resolve correctly
        - add blurb in FAQ that the pi user may need to be added to the "gpio"
          group for sudo-less access
        - bump prereq of GPSD::Parse from 1.01 to 1.02 due to the new
          convenience methods added recently

2.3622  2018-02-10
        - no functional changes
        - added env var and related info about testing RPi::LCD in the testing
          section POD (closes #59)
        - fix small formatting issue (C<<>>) in POD (closes #56)
        - test fixes/updates
        - t/RPiTest.pm now checks whether the serial pins (14, 15) are in alt