@@ -12,6 +12,8 @@ Revision history for Perl extension RPi::WiringPi.
           (closes #69)
         - added rtc() in support for the RPi::RTC::DS3231 distribution
           (closes #70)
+        - added pwm_defaults constants to RPi::Const, and removed PWM magic
+          numbers from Core (closes #72)
 
 2.3625  2018-04-19
         - in FAQ, add the 4 row 20 col config to env vars (closes #65)
